dragon/y.output
   0  $accept : program $end

   1  program : PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'

   2  identifier_list : ID
   3                  | identifier_list ',' ID

   4  declarations : declarations VAR identifier_list ':' type ';'
   5               |

   6  type : standard_type
   7       | ARRAY '[' INUM DOTDOT INUM ']' OF standard_type

   8  standard_type : INTEGER
   9                | REAL

  10  subprogram_declarations : subprogram_declarations subprogram_declaration ';'
  11                          |

  12  subprogram_declaration : subprogram_head declarations subprogram_declarations compound_statement

  13  subprogram_head : FUNCTION ID arguments ':' standard_type ';'
  14                  | PROCEDURE ID arguments ';'

  15  arguments : '(' parameter_list ')'
  16            |

  17  parameter_list : identifier_list ':' type
  18                 | parameter_list ';' identifier_list ':' type

  19  compound_statement : BBEGIN optional_statements END

  20  optional_statements : statement_list
  21                      |

  22  statement_list : statement
  23                 | statement_list ';' statement

  24  statement : variable ASSIGNOP expression
  25            | procedure_statement
  26            | compound_statement
  27            | IF expression THEN statement ELSE statement
  28            | WHILE expression DO statement

  29  variable : ID
  30           | ID '[' expression ']'

  31  procedure_statement : ID
  32                      | ID '(' expression_list ')'

  33  expression_list : expression
  34                  | expression_list ',' expression

  35  expression : simple_expression
  36             | simple_expression RELOP simple_expression

  37  simple_expression : term
  38                    | sign term
  39                    | simple_expression ADDOP term

  40  term : factor
  41       | term MULOP factor

  42  factor : ID
  43         | ID '[' expression ']'
  44         | ID '(' expression_list ')'
  45         | INUM
  46         | RNUM
  47         | '(' expression ')'
  48         | NOT factor

  49  sign : '+'
  50       | '-'

state 0
	$accept : . program $end  (0)

	PROGRAM  shift 1
	.  error

	program  goto 2


state 1
	program : PROGRAM . ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'  (1)

	ID  shift 3
	.  error


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : PROGRAM ID . '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'  (1)

	'('  shift 4
	.  error


state 4
	program : PROGRAM ID '(' . identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'  (1)

	ID  shift 5
	.  error

	identifier_list  goto 6


state 5
	identifier_list : ID .  (2)

	.  reduce 2


state 6
	program : PROGRAM ID '(' identifier_list . ')' ';' declarations subprogram_declarations compound_statement '.'  (1)
	identifier_list : identifier_list . ',' ID  (3)

	')'  shift 7
	','  shift 8
	.  error


state 7
	program : PROGRAM ID '(' identifier_list ')' . ';' declarations subprogram_declarations compound_statement '.'  (1)

	';'  shift 9
	.  error


state 8
	identifier_list : identifier_list ',' . ID  (3)

	ID  shift 10
	.  error


state 9
	program : PROGRAM ID '(' identifier_list ')' ';' . declarations subprogram_declarations compound_statement '.'  (1)
	declarations : .  (5)

	.  reduce 5

	declarations  goto 11


state 10
	identifier_list : identifier_list ',' ID .  (3)

	.  reduce 3


state 11
	program : PROGRAM ID '(' identifier_list ')' ';' declarations . subprogram_declarations compound_statement '.'  (1)
	declarations : declarations . VAR identifier_list ':' type ';'  (4)
	subprogram_declarations : .  (11)

	VAR  shift 12
	BBEGIN  reduce 11
	PROCEDURE  reduce 11
	FUNCTION  reduce 11

	subprogram_declarations  goto 13


state 12
	declarations : declarations VAR . identifier_list ':' type ';'  (4)

	ID  shift 5
	.  error

	identifier_list  goto 14


state 13
	program : PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations . compound_statement '.'  (1)
	subprogram_declarations : subprogram_declarations . subprogram_declaration ';'  (10)

	BBEGIN  shift 15
	PROCEDURE  shift 16
	FUNCTION  shift 17
	.  error

	compound_statement  goto 18
	subprogram_declaration  goto 19
	subprogram_head  goto 20


state 14
	identifier_list : identifier_list . ',' ID  (3)
	declarations : declarations VAR identifier_list . ':' type ';'  (4)

	','  shift 8
	':'  shift 21
	.  error


state 15
	compound_statement : BBEGIN . optional_statements END  (19)
	optional_statements : .  (21)

	BBEGIN  shift 15
	IF  shift 22
	WHILE  shift 23
	ID  shift 24
	END  reduce 21

	compound_statement  goto 25
	optional_statements  goto 26
	statement_list  goto 27
	statement  goto 28
	variable  goto 29
	procedure_statement  goto 30


state 16
	subprogram_head : PROCEDURE . ID arguments ';'  (14)

	ID  shift 31
	.  error


state 17
	subprogram_head : FUNCTION . ID arguments ':' standard_type ';'  (13)

	ID  shift 32
	.  error


state 18
	program : PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement . '.'  (1)

	'.'  shift 33
	.  error


state 19
	subprogram_declarations : subprogram_declarations subprogram_declaration . ';'  (10)

	';'  shift 34
	.  error


state 20
	subprogram_declaration : subprogram_head . declarations subprogram_declarations compound_statement  (12)
	declarations : .  (5)

	.  reduce 5

	declarations  goto 35


state 21
	declarations : declarations VAR identifier_list ':' . type ';'  (4)

	ARRAY  shift 36
	INTEGER  shift 37
	REAL  shift 38
	.  error

	type  goto 39
	standard_type  goto 40


state 22
	statement : IF . expression THEN statement ELSE statement  (27)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	'+'  shift 46
	'-'  shift 47
	.  error

	expression  goto 48
	simple_expression  goto 49
	term  goto 50
	sign  goto 51
	factor  goto 52


state 23
	statement : WHILE . expression DO statement  (28)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	'+'  shift 46
	'-'  shift 47
	.  error

	expression  goto 53
	simple_expression  goto 49
	term  goto 50
	sign  goto 51
	factor  goto 52


state 24
	variable : ID .  (29)
	variable : ID . '[' expression ']'  (30)
	procedure_statement : ID .  (31)
	procedure_statement : ID . '(' expression_list ')'  (32)

	'('  shift 54
	'['  shift 55
	END  reduce 31
	ELSE  reduce 31
	ASSIGNOP  reduce 29
	';'  reduce 31


state 25
	statement : compound_statement .  (26)

	.  reduce 26


state 26
	compound_statement : BBEGIN optional_statements . END  (19)

	END  shift 56
	.  error


state 27
	optional_statements : statement_list .  (20)
	statement_list : statement_list . ';' statement  (23)

	';'  shift 57
	END  reduce 20


state 28
	statement_list : statement .  (22)

	.  reduce 22


state 29
	statement : variable . ASSIGNOP expression  (24)

	ASSIGNOP  shift 58
	.  error


state 30
	statement : procedure_statement .  (25)

	.  reduce 25


state 31
	subprogram_head : PROCEDURE ID . arguments ';'  (14)
	arguments : .  (16)

	'('  shift 59
	';'  reduce 16

	arguments  goto 60


state 32
	subprogram_head : FUNCTION ID . arguments ':' standard_type ';'  (13)
	arguments : .  (16)

	'('  shift 59
	':'  reduce 16

	arguments  goto 61


state 33
	program : PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.' .  (1)

	.  reduce 1


state 34
	subprogram_declarations : subprogram_declarations subprogram_declaration ';' .  (10)

	.  reduce 10


state 35
	declarations : declarations . VAR identifier_list ':' type ';'  (4)
	subprogram_declaration : subprogram_head declarations . subprogram_declarations compound_statement  (12)
	subprogram_declarations : .  (11)

	VAR  shift 12
	BBEGIN  reduce 11
	PROCEDURE  reduce 11
	FUNCTION  reduce 11

	subprogram_declarations  goto 62


state 36
	type : ARRAY . '[' INUM DOTDOT INUM ']' OF standard_type  (7)

	'['  shift 63
	.  error


state 37
	standard_type : INTEGER .  (8)

	.  reduce 8


state 38
	standard_type : REAL .  (9)

	.  reduce 9


state 39
	declarations : declarations VAR identifier_list ':' type . ';'  (4)

	';'  shift 64
	.  error


state 40
	type : standard_type .  (6)

	.  reduce 6


state 41
	factor : NOT . factor  (48)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	.  error

	factor  goto 65


state 42
	factor : ID .  (42)
	factor : ID . '[' expression ']'  (43)
	factor : ID . '(' expression_list ')'  (44)

	'('  shift 66
	'['  shift 67
	END  reduce 42
	THEN  reduce 42
	ELSE  reduce 42
	DO  reduce 42
	RELOP  reduce 42
	ADDOP  reduce 42
	MULOP  reduce 42
	')'  reduce 42
	';'  reduce 42
	','  reduce 42
	']'  reduce 42


state 43
	factor : INUM .  (45)

	.  reduce 45


state 44
	factor : RNUM .  (46)

	.  reduce 46


state 45
	factor : '(' . expression ')'  (47)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	'+'  shift 46
	'-'  shift 47
	.  error

	expression  goto 68
	simple_expression  goto 49
	term  goto 50
	sign  goto 51
	factor  goto 52


state 46
	sign : '+' .  (49)

	.  reduce 49


state 47
	sign : '-' .  (50)

	.  reduce 50


state 48
	statement : IF expression . THEN statement ELSE statement  (27)

	THEN  shift 69
	.  error


state 49
	expression : simple_expression .  (35)
	expression : simple_expression . RELOP simple_expression  (36)
	simple_expression : simple_expression . ADDOP term  (39)

	RELOP  shift 70
	ADDOP  shift 71
	END  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	DO  reduce 35
	')'  reduce 35
	';'  reduce 35
	','  reduce 35
	']'  reduce 35


state 50
	simple_expression : term .  (37)
	term : term . MULOP factor  (41)

	MULOP  shift 72
	END  reduce 37
	THEN  reduce 37
	ELSE  reduce 37
	DO  reduce 37
	RELOP  reduce 37
	ADDOP  reduce 37
	')'  reduce 37
	';'  reduce 37
	','  reduce 37
	']'  reduce 37


state 51
	simple_expression : sign . term  (38)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	.  error

	term  goto 73
	factor  goto 52


state 52
	term : factor .  (40)

	.  reduce 40


state 53
	statement : WHILE expression . DO statement  (28)

	DO  shift 74
	.  error


state 54
	procedure_statement : ID '(' . expression_list ')'  (32)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	'+'  shift 46
	'-'  shift 47
	.  error

	expression  goto 75
	expression_list  goto 76
	simple_expression  goto 49
	term  goto 50
	sign  goto 51
	factor  goto 52


state 55
	variable : ID '[' . expression ']'  (30)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	'+'  shift 46
	'-'  shift 47
	.  error

	expression  goto 77
	simple_expression  goto 49
	term  goto 50
	sign  goto 51
	factor  goto 52


state 56
	compound_statement : BBEGIN optional_statements END .  (19)

	.  reduce 19


state 57
	statement_list : statement_list ';' . statement  (23)

	BBEGIN  shift 15
	IF  shift 22
	WHILE  shift 23
	ID  shift 24
	.  error

	compound_statement  goto 25
	statement  goto 78
	variable  goto 29
	procedure_statement  goto 30


state 58
	statement : variable ASSIGNOP . expression  (24)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	'+'  shift 46
	'-'  shift 47
	.  error

	expression  goto 79
	simple_expression  goto 49
	term  goto 50
	sign  goto 51
	factor  goto 52


state 59
	arguments : '(' . parameter_list ')'  (15)

	ID  shift 5
	.  error

	identifier_list  goto 80
	parameter_list  goto 81


state 60
	subprogram_head : PROCEDURE ID arguments . ';'  (14)

	';'  shift 82
	.  error


state 61
	subprogram_head : FUNCTION ID arguments . ':' standard_type ';'  (13)

	':'  shift 83
	.  error


state 62
	subprogram_declarations : subprogram_declarations . subprogram_declaration ';'  (10)
	subprogram_declaration : subprogram_head declarations subprogram_declarations . compound_statement  (12)

	BBEGIN  shift 15
	PROCEDURE  shift 16
	FUNCTION  shift 17
	.  error

	compound_statement  goto 84
	subprogram_declaration  goto 19
	subprogram_head  goto 20


state 63
	type : ARRAY '[' . INUM DOTDOT INUM ']' OF standard_type  (7)

	INUM  shift 85
	.  error


state 64
	declarations : declarations VAR identifier_list ':' type ';' .  (4)

	.  reduce 4


state 65
	factor : NOT factor .  (48)

	.  reduce 48


state 66
	factor : ID '(' . expression_list ')'  (44)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	'+'  shift 46
	'-'  shift 47
	.  error

	expression  goto 75
	expression_list  goto 86
	simple_expression  goto 49
	term  goto 50
	sign  goto 51
	factor  goto 52


state 67
	factor : ID '[' . expression ']'  (43)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	'+'  shift 46
	'-'  shift 47
	.  error

	expression  goto 87
	simple_expression  goto 49
	term  goto 50
	sign  goto 51
	factor  goto 52


state 68
	factor : '(' expression . ')'  (47)

	')'  shift 88
	.  error


state 69
	statement : IF expression THEN . statement ELSE statement  (27)

	BBEGIN  shift 15
	IF  shift 22
	WHILE  shift 23
	ID  shift 24
	.  error

	compound_statement  goto 25
	statement  goto 89
	variable  goto 29
	procedure_statement  goto 30


state 70
	expression : simple_expression RELOP . simple_expression  (36)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	'+'  shift 46
	'-'  shift 47
	.  error

	simple_expression  goto 90
	term  goto 50
	sign  goto 51
	factor  goto 52


state 71
	simple_expression : simple_expression ADDOP . term  (39)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	.  error

	term  goto 91
	factor  goto 52


state 72
	term : term MULOP . factor  (41)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	.  error

	factor  goto 92


state 73
	simple_expression : sign term .  (38)
	term : term . MULOP factor  (41)

	MULOP  shift 72
	END  reduce 38
	THEN  reduce 38
	ELSE  reduce 38
	DO  reduce 38
	RELOP  reduce 38
	ADDOP  reduce 38
	')'  reduce 38
	';'  reduce 38
	','  reduce 38
	']'  reduce 38


state 74
	statement : WHILE expression DO . statement  (28)

	BBEGIN  shift 15
	IF  shift 22
	WHILE  shift 23
	ID  shift 24
	.  error

	compound_statement  goto 25
	statement  goto 93
	variable  goto 29
	procedure_statement  goto 30


state 75
	expression_list : expression .  (33)

	.  reduce 33


state 76
	procedure_statement : ID '(' expression_list . ')'  (32)
	expression_list : expression_list . ',' expression  (34)

	')'  shift 94
	','  shift 95
	.  error


state 77
	variable : ID '[' expression . ']'  (30)

	']'  shift 96
	.  error


state 78
	statement_list : statement_list ';' statement .  (23)

	.  reduce 23


state 79
	statement : variable ASSIGNOP expression .  (24)

	.  reduce 24


state 80
	identifier_list : identifier_list . ',' ID  (3)
	parameter_list : identifier_list . ':' type  (17)

	','  shift 8
	':'  shift 97
	.  error


state 81
	arguments : '(' parameter_list . ')'  (15)
	parameter_list : parameter_list . ';' identifier_list ':' type  (18)

	')'  shift 98
	';'  shift 99
	.  error


state 82
	subprogram_head : PROCEDURE ID arguments ';' .  (14)

	.  reduce 14


state 83
	subprogram_head : FUNCTION ID arguments ':' . standard_type ';'  (13)

	INTEGER  shift 37
	REAL  shift 38
	.  error

	standard_type  goto 100


state 84
	subprogram_declaration : subprogram_head declarations subprogram_declarations compound_statement .  (12)

	.  reduce 12


state 85
	type : ARRAY '[' INUM . DOTDOT INUM ']' OF standard_type  (7)

	DOTDOT  shift 101
	.  error


state 86
	expression_list : expression_list . ',' expression  (34)
	factor : ID '(' expression_list . ')'  (44)

	')'  shift 102
	','  shift 95
	.  error


state 87
	factor : ID '[' expression . ']'  (43)

	']'  shift 103
	.  error


state 88
	factor : '(' expression ')' .  (47)

	.  reduce 47


state 89
	statement : IF expression THEN statement . ELSE statement  (27)

	ELSE  shift 104
	.  error


state 90
	expression : simple_expression RELOP simple_expression .  (36)
	simple_expression : simple_expression . ADDOP term  (39)

	ADDOP  shift 71
	END  reduce 36
	THEN  reduce 36
	ELSE  reduce 36
	DO  reduce 36
	')'  reduce 36
	';'  reduce 36
	','  reduce 36
	']'  reduce 36


state 91
	simple_expression : simple_expression ADDOP term .  (39)
	term : term . MULOP factor  (41)

	MULOP  shift 72
	END  reduce 39
	THEN  reduce 39
	ELSE  reduce 39
	DO  reduce 39
	RELOP  reduce 39
	ADDOP  reduce 39
	')'  reduce 39
	';'  reduce 39
	','  reduce 39
	']'  reduce 39


state 92
	term : term MULOP factor .  (41)

	.  reduce 41


state 93
	statement : WHILE expression DO statement .  (28)

	.  reduce 28


state 94
	procedure_statement : ID '(' expression_list ')' .  (32)

	.  reduce 32


state 95
	expression_list : expression_list ',' . expression  (34)

	NOT  shift 41
	ID  shift 42
	INUM  shift 43
	RNUM  shift 44
	'('  shift 45
	'+'  shift 46
	'-'  shift 47
	.  error

	expression  goto 105
	simple_expression  goto 49
	term  goto 50
	sign  goto 51
	factor  goto 52


state 96
	variable : ID '[' expression ']' .  (30)

	.  reduce 30


state 97
	parameter_list : identifier_list ':' . type  (17)

	ARRAY  shift 36
	INTEGER  shift 37
	REAL  shift 38
	.  error

	type  goto 106
	standard_type  goto 40


state 98
	arguments : '(' parameter_list ')' .  (15)

	.  reduce 15


state 99
	parameter_list : parameter_list ';' . identifier_list ':' type  (18)

	ID  shift 5
	.  error

	identifier_list  goto 107


state 100
	subprogram_head : FUNCTION ID arguments ':' standard_type . ';'  (13)

	';'  shift 108
	.  error


state 101
	type : ARRAY '[' INUM DOTDOT . INUM ']' OF standard_type  (7)

	INUM  shift 109
	.  error


state 102
	factor : ID '(' expression_list ')' .  (44)

	.  reduce 44


state 103
	factor : ID '[' expression ']' .  (43)

	.  reduce 43


state 104
	statement : IF expression THEN statement ELSE . statement  (27)

	BBEGIN  shift 15
	IF  shift 22
	WHILE  shift 23
	ID  shift 24
	.  error

	compound_statement  goto 25
	statement  goto 110
	variable  goto 29
	procedure_statement  goto 30


state 105
	expression_list : expression_list ',' expression .  (34)

	.  reduce 34


state 106
	parameter_list : identifier_list ':' type .  (17)

	.  reduce 17


state 107
	identifier_list : identifier_list . ',' ID  (3)
	parameter_list : parameter_list ';' identifier_list . ':' type  (18)

	','  shift 8
	':'  shift 111
	.  error


state 108
	subprogram_head : FUNCTION ID arguments ':' standard_type ';' .  (13)

	.  reduce 13


state 109
	type : ARRAY '[' INUM DOTDOT INUM . ']' OF standard_type  (7)

	']'  shift 112
	.  error


state 110
	statement : IF expression THEN statement ELSE statement .  (27)

	.  reduce 27


state 111
	parameter_list : parameter_list ';' identifier_list ':' . type  (18)

	ARRAY  shift 36
	INTEGER  shift 37
	REAL  shift 38
	.  error

	type  goto 113
	standard_type  goto 40


state 112
	type : ARRAY '[' INUM DOTDOT INUM ']' . OF standard_type  (7)

	OF  shift 114
	.  error


state 113
	parameter_list : parameter_list ';' identifier_list ':' type .  (18)

	.  reduce 18


state 114
	type : ARRAY '[' INUM DOTDOT INUM ']' OF . standard_type  (7)

	INTEGER  shift 37
	REAL  shift 38
	.  error

	standard_type  goto 115


state 115
	type : ARRAY '[' INUM DOTDOT INUM ']' OF standard_type .  (7)

	.  reduce 7


48 terminals, 23 nonterminals
51 grammar rules, 116 states
